# CreaTeam-ComputerSecurity

./: .gitignore  README.md
Diagrams/: .$component.drawio.bkp  adatfolyam ábra.drawio  component.drawio
Diagrams/sequence/: .$search.drawio.bkp  .$search.drawio.dtmp  .$search.drawio_1.dtmp  search.drawio
ExampleFiles/: out.json
Parser/: CMakeLists.txt  fuzz.sh
Parser/include/: bitmap.h  caff.h  ciff.h  error.h  json.h  matadata.h  parser.hpp  pixel.h
Parser/src/: caff.cpp  ciff.cpp  main.cpp
Webshop/: .gitignore  README.md  caffshop.code-workspace  docker-compose-dev.yaml  docker-compose-prod.yaml
Webshop/backend/: pom.xml
Webshop/backend/src/main/resources/: application.properties
Webshop/backend/src/main/resources/openapi/: openapi.yaml
Webshop/backend/src/test/resources/: application.properties
Webshop/frontend/: angular.json  package-lock.json  package.json  proxy.conf.js
Webshop/frontend/src/: styles.scss
Webshop/frontend/src/app/: access-guard.ts  app-routing.module.ts  app.module.ts
Webshop/frontend/src/app/api/: api-interceptor.ts  services.ts
Webshop/frontend/src/app/api/webshop/: models.ts  (+1 more)
Webshop/frontend/src/app/services/: user.service.ts
Webshop/frontend/src/interfaces/: file-data.interface.ts  product-image-data.interface.ts  user-data.interface.ts
Webshop/frontend/src/modules/list-view/: list-view.module.ts
Webshop/frontend/src/modules/product-view/: details.module.ts
Webshop/frontend/src/modules/profile/: profile.module.ts
Webshop/frontend/src/modules/testdata/: product-details.testdata.ts  product-list.testdata.ts
(+135 files in other folders)
